# TravisCppMakefileExample

./: .codecov.yml  .gitmodules  .sonarcloud.properties  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  compile_part_1.sh  generate_gcov.sh  gtest.cmake  sonar-project.properties
.github/: FUNDING.yml
lib/local_gtest_scripts/: get-nprocessors.sh  travis.sh
